--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.20",
+    "@vuepress/plugin-docsearch": "^2.0.0-rc.82",
     "sass-embedded": "^1.85.1",
     "vue": "^3.5.13",
     "vuepress": "2.0.0-rc.20",
+    "vuepress-plugin-dynamic-title": "^1.0.0",
+    "vuepress-plugin-ribbon": "^1.1.6",
     "vuepress-theme-hope": "2.0.0-rc.74"
   }
 }
